add projects section and music player

--- a/ClientApp/src/app/about/about.component.html
+++ b/ClientApp/src/app/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="about-wrapper">
     <div class="row align-items-center">
       <div class="col-md-4">
-        <img src={{file_location}} alt="name" class="img-fluid rounded-circle" />
+        <img src={{file_location}} alt="name" class="img-fluid rounded-circle custom-image" />
       </div>
       <div class="col-md-8">
         <h1 class="display-4">{{ name }}</h1>
