--- a/ClientApp/src/app/education/education.component.html
+++ b/ClientApp/src/app/education/education.component.html
@@ -1,8 +1,6 @@
 <hr class="divider">
 <section id="education" class="container">
-  <h2 class="mb-4">Education</h2>
-
-  <!-- Education Point 1 -->
+  <h2 class="text-center mb-5">Education</h2>
   <div class="row mb-4">
     <div class="col-md-8">
       <h4>{{ getUnivesity() }}</h4>
@@ -16,7 +14,4 @@
       <p><strong>{{ getDuration() }}</strong></p>
     </div>
   </div>
-
-  <!-- Add more education points if needed -->
-
 </section>
