--- a/ClientApp/src/app/experience/experience.component.html
+++ b/ClientApp/src/app/experience/experience.component.html
@@ -1,6 +1,6 @@
 <hr class="divider">
 <section id="experience" class="container">
-  <h2 class="mb-4">Experience</h2>
+  <h2 class="text-center mb-5">Experience</h2>
   <div class="row mb-4" *ngFor="let experience of getExperiences()">
     <div class="col-md-8">
       <h4>{{ experience.title }}</h4>
