--- a/ClientApp/src/app/navbar/navbar.component.html
+++ b/ClientApp/src/app/navbar/navbar.component.html
@@ -17,6 +17,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#interests">Interests</a>
       </li>
+      <li>
+        <app-music-player></app-music-player>
+      </li>
     </ul>
   </div>
 </nav>
