--- a/ClientApp/src/app/navbar/navbar.component.css
+++ b/ClientApp/src/app/navbar/navbar.component.css
@@ -1,36 +1,61 @@
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-    padding: 1rem;
+.navbar {
+  padding: 20px;
+}
+
+.navbar-brand {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.navbar-toggler-icon {
+  background-color: #333333;
+}
+
+.navbar-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.nav-item {
+  margin-right: 10px;
+}
+
+.nav-link {
+  color: #333333;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+@media (max-width: 991px) {
+  .navbar-nav {
+    flex-direction: column;
+    align-items: flex-start;
   }
-  
-  ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+
+  .nav-item {
+    margin-right: 0;
+    margin-bottom: 10px;
   }
-  
-  li {
-    margin-right: 1rem;
+
+  .navbar-toggler {
+    margin-left: auto;
+    margin-right: 0;
+    margin-top: 10px;
   }
-  
-  .music-player {
-    display: flex;
-    align-items: center;
+
+  .navbar-collapse {
+    background-color: #f8f9fa;
+    padding: 10px;
   }
-  
-  .play-button, .pause-button {
-    background-color: yellow;
-    border: none;
-    color: #fff;
-    font-size: 1.5rem;
-    margin-right: 0.5rem;
+
+  .navbar-nav .nav-item {
+    text-align: center;
+    margin-bottom: 0;
   }
-  
-  .play-button:hover, .pause-button:hover {
-    cursor: pointer;
-    opacity: 0.8;
+
+  .navbar-nav .nav-link {
+    padding: .5rem 0;
+    font-size: 1.2rem;
   }
+}
