--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -34,6 +34,7 @@ html {
 
 body {
   padding-top: 60px;
+  font-size: 16px;
 }
 
 .btn-link:hover {
@@ -53,4 +54,37 @@ body {
   justify-content: center;
   min-height: calc(70vh - 30px);
   margin-bottom: calc(30vh - 30px);
+}
+
+body {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+@media (max-width: 767px) {
+  body {
+    font-size: 14px;
+    line-height: 1.6;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  body {
+    font-size: 15px;
+    line-height: 1.4;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  body {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 1200px) {
+  body {
+    font-size: 18px;
+    line-height: 1.6;
+  }
 }
