fix navbar and projects

--- a/ClientApp/src/app/music-player/music-player.component.html
+++ b/ClientApp/src/app/music-player/music-player.component.html
@@ -1,4 +1,4 @@
-<audio #myAudio autoplay controls muted>
+<audio #myAudio controls>
     <source src="assets/song.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
