--- a/ClientApp/src/app/navbar/navbar.component.html
+++ b/ClientApp/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" [ngClass]="{'show': isNavbarOpen}" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link" href="#about">About</a>
         </li>
@@ -21,10 +21,12 @@
         <li class="nav-item">
           <a class="nav-link" href="#interests">Interests</a>
         </li>
-        <li class="nav-item">
-          <app-music-player></app-music-player>
-        </li>
       </ul>
+      <app-music-player></app-music-player>
     </div>
+    
   </div>
 </nav>
+
+
+
