--- a/ClientApp/src/app/projects/projects.component.html
+++ b/ClientApp/src/app/projects/projects.component.html
@@ -1,30 +1,24 @@
 <section id="projects" class="container my-5">
-    <h2 class="text-center mb-5">Projects</h2>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-6 mb-4 mb-md-0" *ngFor="let project of getProjects()">
-                    <div class="card h-100">
-                        <div class="row">
-                            <div class="col-md-6">
-                              <div>
-                                <div class="card-body">
-                                  <h5 class="card-title mb-1">{{ project.title }}</h5>
-                                  <img *ngIf="project.type == 'image'" src="{{ project.path }}" class="card-img-top" alt="Project image">
-                                  <video *ngIf="project.type == 'video'" src="{{ project.path }}" class="card-img-top" alt="Project video" controls></video>
-                                  <a *ngIf="project.github" href="{{ project.github }}" class="btn btn-primary">View on GitHub</a>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col-md-6">
+  <h2 class="text-center mb-5">Projects</h2>
+  <div class="row">
+      <div class="col-md-12">
+          <div class="row d-flex align-items-center justify-content-center">
+              <ng-container *ngFor="let project of getProjects()">
+                  <div class="col-10">
+                      <div class="card h-100 mb-2 mt-2">
+                          <div class="card-body">
+                              <h5 class="card-title mb-1">{{ project.title }}</h5>
+                              <img *ngIf="project.type === 'image'" src="{{ project.path }}" class="card-img-top" alt="Project image">
+                              <video *ngIf="project.type === 'video'" src="{{ project.path }}" class="card-img-top" alt="Project video" controls></video>
+                              <a *ngIf="project.github" href="{{ project.github }}" class="btn btn-primary">View on GitHub</a>
                               <ul>
-                                <li *ngFor="let point of project.points">{{ point }}</li>
+                                  <li *ngFor="let point of project.points">{{ point }}</li>
                               </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                          </div>
+                      </div>
+                  </div>
+              </ng-container>
+          </div>
+      </div>
+  </div>
 </section>
